--- a/rulebooks/error-recieve-rulebook.yml
+++ b/rulebooks/error-recieve-rulebook.yml
@@ -19,23 +19,23 @@
             organization: Default
 
     - name: Auto Reboot
-      condition: event.payload.system_name in system_list
+      condition: event.payload.system_name is defined
       action:
         debug:
-          msg: "auto reboot"
+          var: system_list
 
-    - name: Recomfirm Reboot
-      condition: event.payload.system_name not in system_list
-      action:
-        - run_job_template:
-            name: Teams Action Notification
-            organization: Default
-            job_args: 
-              extra_vars: 
-                subject: '"[障害]{{ event.payload.err_id }}"'
-                description: '"{{ event.payload.context }}"'
-                system_name: '"{{ event.payload.system_name }}"'
-                timestamp: '"{{ event.payload.timestamp }}"'
-                err_id: '"{{ event.payload.err_id }}"'
-                err_target: '"{{ event.payload.err_target }}"'
-                err_code: '"{{ event.payload.err_code }}"'
+    # - name: Recomfirm Reboot
+    #  condition: event.payload.system_name not in system_list
+    #  action:
+    #    - run_job_template:
+    #        name: Teams Action Notification
+    #        organization: Default
+    #        job_args: 
+    #          extra_vars: 
+    #            subject: '"[障害]{{ event.payload.err_id }}"'
+    #            description: '"{{ event.payload.context }}"'
+    #            system_name: '"{{ event.payload.system_name }}"'
+    #            timestamp: '"{{ event.payload.timestamp }}"'
+    #            err_id: '"{{ event.payload.err_id }}"'
+    #            err_target: '"{{ event.payload.err_target }}"'
+    #            err_code: '"{{ event.payload.err_code }}"'
