--- a/auto-reboot.yml
+++ b/auto-reboot.yml
@@ -38,7 +38,7 @@
 
     - name: Update Issue 
       ansible.builtin.uri:
-        url: http://{{ ip_address }}:3000/issues/{{ result_post.json.issue.id }}.json
+        url: "http://{{ ip_address }}:3000/issues/{{ result_post.json.issue.id }}.json"
         method: PUT
         body_format: json
         status_code: 204
@@ -56,7 +56,7 @@
 
     - name: Get Issue
       ansible.builtin.uri:
-        url: http://{{ ip_address }}:3000/issues/{{ result_post.json.issue.id }}.json
+        url: "http://{{ ip_address }}:3000/issues/{{ result_post.json.issue.id }}.json"
         method: GET
         return_content: true
         headers:
