--- a/auto-reboot.yml
+++ b/auto-reboot.yml
@@ -49,7 +49,7 @@
         body: |-
           {
             "issue": {
-              "status_id": "5",
+              "status_id": "5"
             }
           }
       register: result_put
