--- a/redmine_put_issue.yml
+++ b/redmine_put_issue.yml
@@ -1,3 +1,6 @@
+# Job-Template: Redmine Issue Update
+# Env Parameter: ip_address, api_key 
+# Survey Parameter: ticket_no, status_id, context 
 - name: redmine put issue
   hosts: demo_server
   tasks:
