--- a/redmine_put_issue2.yml
+++ b/redmine_put_issue2.yml
@@ -1,3 +1,6 @@
+# Job Template: Redmine Issue Update With Description
+# Env parameter: ip_address, api_key
+# Survey Parameter: ticket_no, status_id, context, action_memo 
 - name: redmine put issue2
   hosts: demo_server
   tasks:
