--- a/teams_action_notification.yml
+++ b/teams_action_notification.yml
@@ -1,3 +1,6 @@
+# Job-Template: Teams Action Notification
+# Env Parameter: ip_address, api_key, project_id, tracker_id, teams_webhook_url, ex_ip_address, powerautomate_webhook_url 
+# Survey Parameter: subject, description, system_name, timestamp, err_id, err_target, err_code 
 - name: Teams action notification
   hosts: demo_server
   tasks:
@@ -60,25 +63,36 @@
                 ],
                 "markdown": true
               }
-            ],
-            "potentialAction": [
-              {
-                "@type": "HttpPOST",
-                "name": "再起動依頼",
-                "target": "http://{{ eda_server }}",
-                "headers": [
-                  {
-                    "name": "content-type",
-                    "value": "application/json"
-                  }
-                ],
-                "bodyContentType": "application/json",
-                "body": "{\"request\": \"reboot\", \"ticket_no\": \"{{ result_post.json.issue.id }}\", \"action_memo\": \"再起動で対応\"}"
-              }
             ]
           }
       register: result_teams
 
-    - name: debug
+    - name: teams debug
       ansible.builtin.debug:
         var: result_teams
+
+    - name: Powerautomates call judge-list-recieve
+      ansible.builtin.uri:
+        url: "{{ powerautomate_webhook_url }}"
+        method: POST
+        body_format: json
+        headers:
+          Content-Type: application/json
+        body: |-
+          {
+            "list_name": "障害対応判定リスト",
+            "subject": "{{ result_post.json.issue.subject }}",
+            "system_name": "{{ result_post.json.issue.custom_fields[0].value }}",
+            "err_id": "{{ result_post.json.issue.custom_fields[2].value }}",
+            "timestamp": "{{ result_post.json.issue.custom_fields[1].value }}",
+            "err_target": "{{ result_post.json.issue.custom_fields[3].value }}",
+            "err_code": "{{ result_post.json.issue.custom_fields[4].value }}",
+            "description": "{{ result_post.json.issue.description }}",
+            "ticket_no": "{{ result_post.json.issue.id }})",
+            "redmine": "http://{{ ex_ip_address }}:3000/issues/{{ result_post.json.issue.id }"
+          }
+      register: result_powera
+
+    - name: powerautomete debug
+      ansible.builtin.debug:
+        var: result_powera
