--- a/redmine_put_issue_close.yml
+++ b/redmine_put_issue_close.yml
@@ -25,10 +25,10 @@
         date_close_second: "{{ (date4 | to_datetime('%Y-%m-%d %H:%M:%S')).timestamp() }}"
         action_time_tsec: "{{ ((date_close_second | int) - (date_start_second | int)) }}"
 
-        action_time_hour: "{{ (action_time_tsec / 3600) | int }}"
-        action_time_tsec2: "{{ (action_time_tsec - (action_time_hour * 3600)) | int }}"
-        action_time_min: "{{ (action_time_tsec2 / 60) | int }}"
-        action_time_sec: "{{ (action_time_tsec2 - (action_time_min * 60)) | int }}" 
+        action_time_hour: "{{ ((action_time_tsec / 3600) | int) }}"
+        action_time_tsec2: "{{ ((action_time_tsec - (action_time_hour * 3600)) | int) }}"
+        action_time_min: "{{ ((action_time_tsec2 / 60) | int) }}"
+        action_time_sec: "{{ ((action_time_tsec2 - (action_time_min * 60)) | int) }}" 
         # action_time_min: "{{ ((date_close_second | int) - (date_start_second | int)) / (60) }}"
 
       ansible.builtin.uri:
