--- a/teams_close_notification.yml
+++ b/teams_close_notification.yml
@@ -21,24 +21,49 @@
         body_format: json
         body: |-
           {
-            "@type": "MessageCard",
-            "@context": "http://schema.org/extensions",
-            "themeColor": "0076D7",
-            "summary": "Teams Notification",
-            "sections": [
+            "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
+            "type": "AdaptiveCard",
+            "version": "1.0",
+            "body": [
               {
-                "activityTitle": "障害クローズ通知",
-                "activitySubtitle": "{{ result_get.json.issue.subject }}",
-                "activityImage": "https://teamsnodesample.azurewebsites.net/static/img/image5.png",
-                "facts": [
-                  {"name": "システム","value": "{{ result_get.json.issue.custom_fields[0].value }}"},
-                  {"name": "障害ID","value": "{{ result_get.json.issue.custom_fields[2].value }}"},
-                  {"name": "障害発生日時","value": "{{ result_get.json.issue.custom_fields[1].value }}"},
-                  {"name": "エラー情報","value": "エラー対象:{{ result_get.json.issue.custom_fields[3].value }}, エラーコード:{{ result_get.json.issue.custom_fields[4].value }}</br>説明:{{ result_get.json.issue.description }}"},
-                  {"name": "対応","value": "- {{ result_get.json.issue.custom_fields[5].value | regex_replace(',', '\r- ') }}"},
-                  {"name": "障害票","value": "[Redmine](http://{{ ex_ip_address }}:3000/issues/{{ ticket_no }})"}
-                ],
-                "markdown": true
+                "type": "ColumnSet",
+                "style": "accent",
+                "bleed": true,
+                "columns": [
+                  {
+                    "type": "Column",
+                    "width": "stretch",
+                    "items": [
+                      {
+                        "type": "TextBlock",
+                        "text": "障害クローズ通知",
+                        "size": "Medium"
+                      },
+                      {
+                        "type": "TextBlock",
+                        "text": "{{ result_get.json.issue.subject }}",
+                        "spacing": "None"
+                      }
+                    ]
+                  }
+                ]
+              },
+              {
+                "type": "TextBlock",
+                "text": "以下障害はクローズしました。"
+              },
+              {
+                "type": "FactSet",
+                  "facts": [
+                    { "title": "システム", "value": "{{ result_get.json.issue.custom_fields[0].value }}" },
+                    { "title": "障害ID", "value": "{{ result_get.json.issue.custom_fields[2].value }}" },
+                    { "title": "障害発生日時", "value":  "{{ result_get.json.issue.custom_fields[1].value }}" },
+                    { "title": "エラー対象", "value": "{{ result_get.json.issue.custom_fields[3].value }}" },
+                    { "title": "エラーコード", "value":  "{{ result_get.json.issue.custom_fields[4].value }}" },
+                    { "title": "説明", "value": "{{ result_get.json.issue.description }}" },
+                    { "title": "障害票", "value": "[Redmine](http://{{ ex_ip_address }}:3000/issues/{{ ticket_no }})" },
+                    { "title": "対応", "value": "- {{ result_get.json.issue.custom_fields[5].value | regex_replace(',', '\r- ') }}" }
+                  ]
               }
             ]
           }
