--- a/teams_close_notification.yml
+++ b/teams_close_notification.yml
@@ -1,5 +1,5 @@
 # Job-Template: Teams Close Notification
-# Env Parameter:ip_address, api_key, teams_webhook_url, ex_ip_address 
+# Env Parameter:ip_address, api_key, powerautomate_webhook_url, ex_ip_address 
 # Survey Parameter:ticket_no 
 - name: Teams Close Notification
   hosts: demo_server
@@ -14,61 +14,24 @@
           X-Redmine-API-Key: "{{ api_key }}" 
       register: result_get
 
-    - name: Teams Notification
+    - name: Powerautomates call close-notify
       ansible.builtin.uri:
-        url: "{{ teams_webhook_url }}"
+        url: "{{ powerautomate_webhook_url }}"
         method: POST
         body_format: json
+        headers:
+          Content-Type: application/json
         body: |-
           {
-            "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
-            "type": "AdaptiveCard",
-            "version": "1.0",
-            "body": [
-              {
-                "type": "ColumnSet",
-                "style": "accent",
-                "bleed": true,
-                "columns": [
-                  {
-                    "type": "Column",
-                    "width": "stretch",
-                    "items": [
-                      {
-                        "type": "TextBlock",
-                        "text": "障害クローズ通知",
-                        "size": "Medium"
-                      },
-                      {
-                        "type": "TextBlock",
-                        "text": "{{ result_get.json.issue.subject }}",
-                        "spacing": "None"
-                      }
-                    ]
-                  }
-                ]
-              },
-              {
-                "type": "TextBlock",
-                "text": "以下障害はクローズしました。"
-              },
-              {
-                "type": "FactSet",
-                  "facts": [
-                    { "title": "システム", "value": "{{ result_get.json.issue.custom_fields[0].value }}" },
-                    { "title": "障害ID", "value": "{{ result_get.json.issue.custom_fields[2].value }}" },
-                    { "title": "障害発生日時", "value":  "{{ result_get.json.issue.custom_fields[1].value }}" },
-                    { "title": "エラー対象", "value": "{{ result_get.json.issue.custom_fields[3].value }}" },
-                    { "title": "エラーコード", "value":  "{{ result_get.json.issue.custom_fields[4].value }}" },
-                    { "title": "説明", "value": "{{ result_get.json.issue.description }}" },
-                    { "title": "障害票", "value": "[Redmine](http://{{ ex_ip_address }}:3000/issues/{{ ticket_no }})" },
-                    { "title": "対応", "value": "- {{ result_get.json.issue.custom_fields[5].value | regex_replace(',', '\r- ') }}" }
-                  ]
-              }
-            ]
+            "subject": "{{ result_get.json.issue.subject }}",
+            "system_name": "{{ result_get.json.issue.custom_fields[0].value }}",
+            "err_id": "{{ result_get.json.issue.custom_fields[2].value }}",
+            "timestamp": "{{ result_get.json.issue.custom_fields[1].value }}",
+            "err_target": "{{ result_get.json.issue.custom_fields[3].value }}",
+            "err_code": "{{ result_get.json.issue.custom_fields[4].value }}",
+            "description": "{{ result_get.json.issue.description }}",
+            "ticket_no": "{{ ticket_no }}",
+            "redmine": "http://{{ ex_ip_address }}:3000/issues/{{ ticket_no }}",
+            "action": "- {{ result_get.json.issue.custom_fields[5].value | regex_replace(',', '\r- ') }}" 
           }
-      register: result_put
-
-    - name: debug
-      ansible.builtin.debug:
-        var: result_put
+      register: result_powera
