--- a/error_judge.yml
+++ b/error_judge.yml
@@ -1,7 +1,7 @@
 # Job-Template: Teams Action Notification
 # Env Parameter: ip_address, api_key, project_id, tracker_id, teams_webhook_url, ex_ip_address, powerautomate_webhook_url 
 # Survey Parameter: subject, description, system_name, timestamp, err_id, err_target, err_code 
-- name: Teams action notification
+- name: Post Issue and Error Judge
   hosts: demo_server
   tasks:
     - name: Redmine Post Issue
@@ -32,44 +32,11 @@
                 {"id":3,"value":"{{ err_id }}"},
                 {"id":4,"value":"{{ err_target }}"},
                 {"id":5,"value":"{{ err_code }}"},
-                {"id":6,"value":"Error:{{ timestamp[:19] }},EventCreate:{{ date3 }}"}
+                {"id":6,"value":"{{ timestamp[:19] }} 障害発生,{{ date3 }} 障害起票"}
               ]
             }
           } 
       register: result_post
-
-    #- name: Teams Notification
-    #  ansible.builtin.uri:
-    #    url: "{{ teams_webhook_url }}"
-    #    method: POST
-    #    body_format: json
-    #    body: |-
-    #      {
-    #        "@type": "MessageCard",
-    #        "@context": "http://schema.org/extensions",
-    #        "themeColor": "0076D7",
-    #        "summary": "Teams Notification",
-    #        "sections": [
-    #          {
-    #            "activityTitle": "障害発生通知",
-    #            "activitySubtitle": "{{ result_post.json.issue.subject }}",
-    #            "activityImage": "https://teamsnodesample.azurewebsites.net/static/img/image5.png",
-    #            "facts": [
-    #              {"name": "システム","value": "{{ result_post.json.issue.custom_fields[0].value }}"},
-    #              {"name": "障害ID","value": "{{ result_post.json.issue.custom_fields[2].value }}"},
-    #              {"name": "障害発生日時","value": "{{ result_post.json.issue.custom_fields[1].value }}"},
-    #              {"name": "エラー情報","value": "エラー対象:{{ result_post.json.issue.custom_fields[3].value }}, エラーコード:{{ result_post.json.issue.custom_fields[4].value }}</br>説明:{{ result_post.json.issue.description }}"},
-    #              {"name": "障害票","value": "[Redmine](http://{{ ex_ip_address }}:3000/issues/{{ result_post.json.issue.id }})"}
-    #            ],
-    #            "markdown": true
-    #          }
-    #        ]
-    #      }
-    #  register: result_teams
-
-    #- name: teams debug
-    #  ansible.builtin.debug:
-    #    var: result_teams
 
     - name: Powerautomates call error-judge
       ansible.builtin.uri:
