--- a/redmine_put_issue_close.yml
+++ b/redmine_put_issue_close.yml
@@ -44,7 +44,7 @@
             "issue": {
               "status_id": "{{ status_id }}",
               "custom_fields":[
-                {"id":6,"value":"{{ result_get.json.issue.custom_fields[5].value }},{{ context }}:{{ date3 }},---,total-time:{{ action_time_hour }}h{{ action_time_min }}m{{ action_time_sec }}s"}
+                {"id":6,"value":"{{ result_get.json.issue.custom_fields[5].value }},{{ date3 }} {{ context }},障害対応時間 {{ action_time_hour }}h{{ action_time_min }}m{{ action_time_sec }}s"}
               ]
             }
           }
