--- a/rulebooks/action-auto-reboot-rulebook.yml
+++ b/rulebooks/action-auto-reboot-rulebook.yml
@@ -18,7 +18,7 @@
               extra_vars: 
                 ticket_no: '"{{ event.payload.ticket_no }}"'
                 status_id: "2"
-                context: "Action"
+                context: "対応実施"
                 action_memo: '"{{ event.payload.action_memo }}"'
 
         - run_job_template:
@@ -32,7 +32,7 @@
               extra_vars: 
                 ticket_no: '"{{ event.payload.ticket_no }}"'
                 status_id: "3"
-                context: "Complete"
+                context: "対応完了"
 
         - run_job_template:
             name: Redmine Issue Update Close
@@ -41,7 +41,7 @@
               extra_vars: 
                 ticket_no: '"{{ event.payload.ticket_no }}"'
                 status_id: "5"
-                context: "Close"
+                context: "クローズ"
 
         - run_job_template:
             name: Teams Close Notification
