--- a/teams_complete_notification.yml
+++ b/teams_complete_notification.yml
@@ -1,5 +1,5 @@
 # Job-Template: Teams Complete Notification
-# Env Parameter: ip_address, api_key, teams_webhook_url, ex_ip_address, powerautomate_webhook_url 
+# Env Parameter: ip_address, api_key, ex_ip_address, powerautomate_webhook_url 
 # Survey Parameter: ticket_no
 - name: Teams Complete Notification
   hosts: demo_server
